# VirtualMachine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  input.s
asm/: CMakeLists.txt  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  token.hpp
common/: instructions.def  machine_code.hpp  regs.def
src/: CMakeLists.txt  disassembler.c  disassembler.h  instructions.def  linenoise.h  machine_code.hpp  main.cpp  repl.cpp  repl.hpp  utils.h  vm.cpp  vm.hpp
test/: add.po  add.ulm  fib.ulm  loadi.ulm
vm/: CMakeLists.txt  linenoise.c  main.cpp  vm  vm.cpp  vm.hpp
